# base-template-py

./: .env.development  .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  Makefile  README.md  main.py  manage_dev_env.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yaml
scripts/: manage_dev_env.py  wait_for_postgres.py
src/: app.py  environment.py
src/api/: __init__.py  app_builder.py  dependencies.py
src/api/v1/: __init__.py
src/api/v1/status/: __init__.py  status.py  status_response.py
src/domain/models/: system_status.py
src/infra/: compose.yaml
src/infra/data/database/: abc.py  pg_database.py
src/infra/data/repository/: abc.py  pg_repository.py
src/use_cases/: get_system_status.py
tests/: conftest.py  orchestrator.py
tests/api/v1/status/: test_status.py
