[project]
name = "base-template-py"
version = "0.1.0"
description = ""
authors = [
    {name = "Hugo Lacerda",email = "hugolacerdar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-watch = "^4.2.0"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
